--- a/jonsvannsveien/src/styles/Home.css
+++ b/jonsvannsveien/src/styles/Home.css
@@ -1,12 +1,30 @@
 body {
-  background-color: rgb(18, 41, 48);
+  background-color: rgb(0, 0, 0);
   box-sizing: border-box;
   overflow: hidden;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: white;
+  letter-spacing: 1px;
 }
 
-.isbjørn-container {
+.øl-top-container {
   width: 100%;
   height: 100vh;
   display: grid;
   place-items: center;
+}
+
+.øl-top-container > img {
+  width: 200px;
+  animation: rotate 0.00001s linear infinite;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
