--- a/jonsvannsveien/src/styles/Home.css
+++ b/jonsvannsveien/src/styles/Home.css
@@ -1,15 +1,15 @@
 body {
-  background-color: rgb(0, 0, 0);
+  background-color: #FFFFFF;
   box-sizing: border-box;
   overflow: hidden;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  color: white;
+  color: black;
   letter-spacing: 1px;
 }
 
 .øl-top-container {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: grid;
   place-items: center;
 }
