--- a/jonsvannsveien/src/styles/Navbar.css
+++ b/jonsvannsveien/src/styles/Navbar.css
@@ -1,70 +1,182 @@
 #navbar-top {
-  background-color: rgb(28, 59, 100);
-  color: #fff;
-  height: 72px;
   width: 100%;
+  height: 68px;
+  display: grid;
+  place-items: center;
   position: fixed;
-  top: 0;
-  left: 0;
+  bottom: 20px;
   z-index: 100;
+}
+
+/*-------------------------------------------------------------------------------*/
+
+#menu-btn {
+  background-color: rgba(255, 255, 255, 0);
+  width: 96px;
+  height: 40px;
+  border-radius: 50px;
   display: grid;
+  place-items: center;
   grid-template-columns: 1fr 1fr;
+  color: white;
+  font-size: 16px;
+  position: relative;
+  left: -10px;
+  z-index: 100;
 }
 
-#moon-container {
-  height: 100%;
-  display: grid;
-  place-items: center;
-  width: 50px;
+#menu-btn::before {
+  content: "";
+  display: block;
   position: absolute;
-  left: 10px;
-}
-
-#menu-icon-container {
+  width: 100%;
   height: 100%;
-  display: grid;
-  place-items: center;
-  width: 50px;
-  position: absolute;
-  right: 10px;
+  border-radius: 50px;
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(7px);
+  z-index: 100;
 }
 
-#navbar-icon {
-  font-size: 30px;
+#menu-btn-text {
+  position: relative;
+  left: -9px;
+  top: -7px;
+  font-weight: 500;
+  z-index: 100;
 }
+
+#menu-btn-icon {
+  position: relative;
+  top: -5px;
+  left: 3px;
+  width: 30px;
+  height: 30px;
+  z-index: 100;
+}
+
+.bar-line {
+  width: 18px;
+  height: 2px;
+  background-color: white;
+  border-radius: 50px;
+  position: absolute;
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out,
+    top 0.3s ease-in-out;
+  transform-origin: center;
+}
+
+.bar-line.rotate {
+  transform: rotate(45deg) scaleX(1.2);
+}
+
+#bar-line-1.rotate {
+  transform: rotate(-45deg) scaleX(1.2);
+  top: 12px;
+}
+#bar-line-2.rotate {
+  transform: rotate(0) translateY(0);
+  opacity: 0;
+}
+
+#bar-line-3.rotate {
+  top: 12px;
+}
+
+#bar-line-1 {
+  top: 5px;
+}
+
+#bar-line-2 {
+  top: 12px;
+  left: 4px;
+}
+
+#bar-line-3 {
+  top: 19px;
+}
+
+@keyframes bar-line {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(45deg);
+  }
+}
+
+/*-------------------------------------------------------------------------------*/
 
 #drop-down-container {
   display: none;
+  opacity: 0;
 }
 
 #drop-down-container-toggled {
+  width: 90%;
+  position: fixed;
+  left: 5%;
+  bottom: 17%;
+  border-radius: 50px;
+  height: 500px;
+  z-index: 100;
+  animation: drop-down-animation 0.5s ease-in-out forwards;
+  grid-template-rows: 80% 20%;
+}
+
+.blur.toggled {
   display: block;
-  width: 100%;
-  position: absolute;
+  position: fixed;
+  width: 80%;
+  left: 10%;
+  bottom: 17%;
+  height: 500px;
+  border-radius: 50px;
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
+  z-index: 100;
+  animation: drop-down-animation 0.5s ease-in-out forwards;
+}
+
+@keyframes blur-background {
+  0% {
+    opacity: 0;
+    display: block;
+  }
+  100% {
+    opacity: 1;
+    display: none;
+  }
+}
+
+.blur-background.toggled {
+  position: fixed;
   left: 0;
-  top: 72px;
-  background-color: rgb(28, 59, 100);
-  height: calc(100% - 72px);
-  animation: drop-down-animation 0.3s ease-in-out forwards;
-  perspective: 1000px;
-  transform-origin: top center;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  animation: drop-down-animation 0.5s ease-in-out forwards;
+  z-index: 10;
 }
 
 @keyframes drop-down-animation {
   0% {
-    transform: scaleY(0);
+    opacity: 0;
   }
   100% {
-    transform: scaleY(1);
+    opacity: 1;
   }
 }
 
 #drop-down-list {
-  height: 60%;
+  height: 90%;
   display: grid;
   place-items: center;
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: 18% 18% 18% 18% 35%;
   position: absolute;
+  top: 2%;
   width: 100%;
   color: rgb(255, 255, 255);
 }
@@ -75,4 +187,36 @@
   cursor: pointer;
   font-weight: 400;
   letter-spacing: 2px;
+}
+
+#hc-img {
+  width: 90px;
+  height: 70px;
+}
+
+/*-------------------------------------------------------------------------------*/
+
+#instagram-icon-container {
+  width: 60%;
+  height: 30px;
+  position: absolute;
+  bottom: 50px;
+  left: 20%;
+  display: grid;
+  place-items: center;
+  grid-template-columns: 20% 80%;
+  color: white;
+  font-size: 16px;
+}
+
+#insta-text {
+  font-weight: 500;
+  letter-spacing: 2px;
+  text-decoration: none;
+}
+
+#insta-img {
+  width: 44px;
+  position: relative;
+  left: 10px;
 }
