--- a/jonsvannsveien/src/styles/App.css
+++ b/jonsvannsveien/src/styles/App.css
@@ -1,12 +1,9 @@
 * {
   font-family: "Open Sans", sans-serif;
-  box-sizing: border-box;
 }
 
 body {
-  background: linear-gradient(
-    180deg,
-    rgb(40, 160, 187) 0%,
-    rgba(28, 64, 196, 0.8) 100%
-  );
+  margin: auto;
+  width: 100%;
+  background-color: #001122;
 }
