--- a/jonsvannsveien/src/styles/Home.css
+++ b/jonsvannsveien/src/styles/Home.css
@@ -23,7 +23,50 @@ body {
   place-items: center;
 }
 
-.home-content h1 {
-  position: relative;
-  top: 2000px;
+.hus {
+  width: 80%;
+}
+
+#title {
+  color: white;
+  font-size: 35px;
+  font-weight: 800;
+}
+
+#waves {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  top: 0;
+  left: 0;
+}
+
+#waves > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+#waves2 {
+  position: absolute;
+  width: 100%;
+  height: 110%;
+  z-index: -1;
+  top: 100%;
+  left: 0;
+}
+
+#waves2 > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+#waves3 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  top: 210%;
+  left: 0;
+  background-color: #3fd8cf;
 }
