--- a/jonsvannsveien/src/styles/Member.css
+++ b/jonsvannsveien/src/styles/Member.css
@@ -1,23 +1,55 @@
 .container {
-  background-color: rgb(28 59 100);
-  border-radius: 25px;
-  padding: 20px;
-  margin: 20px;
-  display: flex;
-  flex-direction: column;
-}
-
-.profileHeader {
+  border-radius: 15px;
+  display: grid;
+  grid-template-rows: 50% 50%;
   color: white;
+  place-items: center;
+  height: 110px;
+  width: 100px;
+  padding: 20px 5px 0px 5px;
+  background-color: rgb(0, 0, 0);
+  border: 3px double rgb(50, 148, 222);
+  overflow: hidden;
+  z-index: 2;
+  position: relative;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
 }
 
-.profilePicture {
-  width: 200px;
-  height: 200px;
-  border-radius: 25px;
-  margin: 20px;
+.container::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 400px;
+  height: 400px;
+  top: -310px;
+  left: -170px;
+  border-radius: 50%;
+  background-color: rgb(226, 180, 43);
+  z-index: 1;
 }
 
-.description {
-  color: white;
+.profileHeaderSmall {
+  font-weight: 600;
+  font-size: 14px;
+  border-radius: 15px;
+  width: 100%;
+  height: 90%;
+  display: grid;
+  place-items: center;
+  z-index: 2;
+}
+
+.profilePictureSmall {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  margin: 5px;
+  z-index: 2;
+  top: -5px;
+  position: relative;
+}
+
+.profilePictureLarge {
+  width: 70%;
+  border-radius: 50%;
 }
