--- a/jonsvannsveien/src/styles/Members.css
+++ b/jonsvannsveien/src/styles/Members.css
@@ -1,12 +1,24 @@
-.wrapper {
-  background-color: #ffffff;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  color: black;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+.wrapper-folka {
+  color: rgb(255, 255, 255);
+  display: grid;
+  place-items: center;
+  height: 100vh;
 }
 
-.header {
-  text-align: center;
+.members-li {
+  width: 90%;
+  display: grid;
+  place-items: center;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  row-gap: 25px;
+  position: relative;
+  top: -4%;
+}
+
+.members-header {
+  position: absolute;
+  width: 100%;
+  display: grid;
+  place-content: center;
 }
