--- a/jonsvannsveien/src/styles/Member.css
+++ b/jonsvannsveien/src/styles/Member.css
@@ -13,6 +13,7 @@
   z-index: 2;
   position: relative;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+  cursor: pointer;
 }
 
 .container::before {
@@ -39,6 +40,18 @@
   z-index: 2;
 }
 
+.profileHeaderLarge {
+  font-weight: 600;
+  font-size: 20px;
+  border-radius: 15px;
+  width: 100%;
+  color: black;
+  height: 90%;
+  display: grid;
+  place-items: center;
+  z-index: 2;
+}
+
 .profilePictureSmall {
   width: 70px;
   height: 70px;
@@ -53,3 +66,4 @@
   width: 70%;
   border-radius: 50%;
 }
+
