--- a/jonsvannsveien/src/styles/Member.css
+++ b/jonsvannsveien/src/styles/Member.css
@@ -67,3 +67,21 @@
   border-radius: 50%;
 }
 
+.modalContainer {
+  display: grid;
+  place-items: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  margin: auto;
+  padding: 10;
+  width: 90%;
+  overflow: scroll;
+  height: 70%;
+  z-index: -1;
+  background-color: darkslategrey;
+  pointer-events: none;
+  transition: all 0.5s ease;
+}
