--- a/jonsvannsveien/src/styles/Gjestebok.css
+++ b/jonsvannsveien/src/styles/Gjestebok.css
@@ -1,7 +1,7 @@
 .containerr {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .name {
@@ -10,4 +10,19 @@
 
 .description {
   padding: 20px;
+}
+
+.inputFields {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.postContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: pink;
+  margin-top: 10px;
+  width: 80vw;
 }
